--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ build/
 **/android/gradlew.bat
 **/android/key.properties
 **/android/local.properties
+**/android/app/key.jks
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS/XCode related
